Fix modal scroll on mobile

--- a/src/assets/modal.css
+++ b/src/assets/modal.css
@@ -8,10 +8,11 @@
     bottom: 0;
     left: 0;
     right: 0;
-    background-color: rgba(0, 0, 0, 0.3);
-    display: flex;
+    background-color: rgba(0, 0, 0, 0.5);
+    /* display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center; */
+    padding: 20px;
     z-index: 10;
 }
 
@@ -22,14 +23,16 @@
     overflow-x: auto;
     display: flex;
     flex-direction: column;
-    margin: 10px;
+    margin: 0 auto;
     max-width: calc(var(--site-width) / 2);
     width: 100%;
+    max-height: 100%;
 }
 
 .modal-body {
     position: relative;
     padding: var(--modal-body-padding);
+    overflow-y: auto;
 }
 
 .modal-footer {
